# OpenGL-Starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/ExampleApp/: ex_app.cpp  ex_app.h  ex_main.cpp
include/app/: app.h
include/gui/: gui.h
include/helpers/: uboBindings.h
include/rendering/: camera.h  glBoilerplate.h  mesh.h  quad.h  shader.h  texture.h  triag.h  window.h
resources/shaders/: simple.frag  simple.vert
src/app/: app.cpp
src/gui/: gui.cpp
src/rendering/: camera.cpp  mesh.cpp  shader.cpp  texture.cpp  window.cpp
